--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <a id="forkme_banner" href="https://github.com/websphere">View on GitHub</a>
 
           <h1 id="project_title">Websphere.github.com</h1>
-          <h2 id="project_tagline">Public web pages of Websphere</h2>
+          <h2 id="project_tagline">Public web pages of sample projects for Websphere</h2>
 
         </header>
     </div>
